--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ before_install:
      - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
      - sudo apt-get update -qq
 install:     
-     - sudo apt-get install qtbase5-dev qtdeclarative5-dev qtdeclarative5-test-plugin libqt5quick5 libqt5qml5 qtdeclarative5-qtquick2-plugin qt5-default qttools5-dev-tools
-     - sudo apt-get install cmake
-     - sudo apt-get install liblzma-dev liblzo2-dev
-     - sudo apt-get install libboost-all-dev
+     - sudo apt-get install -qq qtbase5-dev qtdeclarative5-dev qtdeclarative5-test-plugin libqt5quick5 libqt5qml5 qtdeclarative5-qtquick2-plugin qt5-default qttools5-dev-tools
+     - sudo apt-get install -qq cmake
+     - sudo apt-get install -qq liblzma-dev liblzo2-dev
+     - sudo apt-get install -qq libboost-all-dev
      # GCC / Clang (Needed until Travis CI updates to Ubuntu 14.04+)
      - sudo apt-get install -qq --force-yes g++-4.9
      - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 90
