--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
      # gcc 4.9
      - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
      # cmake 2.8.11
-     - sudo add-apt-repository --yes ppa:kalakris/cmake
+     - sudo add-apt-repository --yes ppa:george-edison55/cmake-3.x
      # repository for qt5
      # sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
      - sudo apt-get update -qq
